Functional CineCam System
start the simple camera system

--- a/CineCam/Assembly-CSharp-Editor-vs.csproj
+++ b/CineCam/Assembly-CSharp-Editor-vs.csproj
@@ -44,6 +44,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CineCam\Editor\CineCamEditor.cs" />
      <Compile Include="Assets\Editor\GridEditor.cs" />
      <Compile Include="Assets\Editor\GridWindow.cs" />
  <Reference Include="Assembly-UnityScript">
